# myalx

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/myalx/: __init__.py  cli.py  config.py  myalx.py  project.py  spider.py  utils.py
tests/: test_config.py  test_myalx.py
