[tool.poetry]
name = "myalx"
version = "0.1.0"
description = "A package for doing hard things!"
authors = ["Amon Munyai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
configparser = "^6.0.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
myalx = "myalx.myalx:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
