[tool.poetry]
name = "myalx"
version = "0.1.0"
description = "A package for doing hard things!"
authors = ["Amon Munyai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
configparser = "^6.0.1"
click = "^8.1.7"
scrapy = "^2.11.1"
markdownify = "^0.11.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
myalx = "myalx.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
