[tool.poetry]
name = "myalx"
version = "0.1.0"
description = "A package for doing hard things!"
authors = ["Amon Munyai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
scrapy = "^2.11.1"
markdownify = "^0.11.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
myalx = "myalx.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
